--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,20 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <meta property="og:title" content="My website title" />
+    <meta
+      property="og:description"
+      content="Spartapedia-Movie"
+    />
+    <meta
+      property="og:image"
+      content="{{ url_for('static', filename='ogimage.png') }}"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
